objects/Job_Application__c.object
<CustomObject>
    <description>Represents a candidate&apos;s application to a position.</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>Job Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Review Resume</fullName>
                </value>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Schedule Interviews</fullName>
                </value>
                <value>
                    <fullName>Extend an Offer</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <label>Cover Letter</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <label>Total Rating</label>
        <summarizedField>Review__c.Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Update_Token__c</fullName>
        <description>Token to be generated to confirm identity for update an existing application</description>
        <inlineHelpText>Token to be generated to confirm identity for update an existing application</inlineHelpText>
        <label>Update Token</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>Total_Rating__c / Number_of_Reviews__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_Email__c</fullName>
        <formula>Candidate__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <description>LinkedIn Profile Link from the Candidate record</description>
        <formula>Hyperlink( Candidate__r.LinkedIn_Profile__c, Candidate__r.LinkedIn_Profile__c, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LinkedIn Profile Link from the Candidate record</inlineHelpText>
        <label>LinkedIn Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Expires_On__c</fullName>
        <description>The date/time that the current token expires</description>
        <inlineHelpText>The date/time that the current token expires</inlineHelpText>
        <label>Token Expires On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Reviews__c</fullName>
        <label>Number of Reviews</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Candidate_First_Name__c</fullName>
        <formula>Candidate__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Email_at_Submission_Time__c</fullName>
        <description>Records the email at the time this application was submitted</description>
        <inlineHelpText>Records the email at the time this application was submitted</inlineHelpText>
        <label>Candidate Email at Submission Time</label>
        <type>Email</type>
    </fields>
    <recordTypes>
        <fullName>Hiring_ManagerRT</fullName>
        <active>true</active>
        <label>Hiring ManagerRT</label>
    </recordTypes>
</CustomObject>